--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ version: 2
 
 # Personal info
 name: Martin Mikus
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+title: Senior SAP FullStack Developer
+email: martinmikus2@protonmail.com
+#website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
 darkmode: false
