--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,11 @@ version: 2
 name: Martin Mikus
 title: Senior SAP FullStack Developer
 email: martinmikus2@protonmail.com
+phone: 654645
 #website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 #twitter_username: facespics
