--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ darkmode: true
 # facebook_username: jekyll
 # flickr_username: jekyll
 #instagram_username: jameswgrant
-linkedin_username: https://www.linkedin.com/in/martin-k-881394119/
+linkedin_username: martin-k-881394119
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: globalmtb
