--- a/_config.yml
+++ b/_config.yml
@@ -46,9 +46,8 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
-content:
+Welcome to my professional work profile. My name is Martin and I am full stack SAP developer. I work daily with <mark>ABAP</mark>, <mark>SAPUI5</mark>, <mark>JavaScript</mark> and <mark>SAP Business Workflow</mark>.
+I successfully delivered multiple projects for european and asian cudtomers. Apart from projects development I support business as usual. For development I use <mark> 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
