--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-
+bdbsbsb
 
 content:
   - title: Projects # Title for the section
