--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,8 @@ about_content: | # this will include new lines to allow paragraphs
   Mostly I work in <mark>SAP S/4HANA</mark> environment but also have experience with older ERP releases. 
   Primarily in modules <mark>FI-CO</mark>, <mark>HR/HCM</mark>, <mark>SD</mark>, <mark>MM</mark>, and <mark>BW</mark>.  
 
-  For development, I use <mark>Eclipse ADT</mark> and <mark>SAP Business Application Studio</mark>. I’m also familiar with <mark>Git</mark> and <mark>VS Code</mark>. 
+  For development, I use <mark>Eclipse ADT</mark> and <mark>SAP Business Application Studio</mark> and sometimes <mark>VS Code</mark>. 
+  I am proficient in utilizing <mark>Git</mark> for source code management and team collaboration.
 
   Apart from project development, I support business as usual—analyzing errors, fixing bugs, and designing new business solutions. 
   I have successfully delivered multiple projects for European and Asian customers.
