--- a/_config.yml
+++ b/_config.yml
@@ -66,18 +66,22 @@ content:
     content:
       - layout: left
         title: Magellen Tax Portal
-        sub_title: Heidelberg Materials
-        caption: Germany
+        sub_title: Heidelberg Materials Germany
+        caption: Duration - 1 year (2024-2025)
         description: | # this will include new lines to allow paragraphs
           I participated on development of Tax Portal as technical team leader. I designed and developed UI of final solution using custom <mark>SAPUI5</mark> SDK.
-          I developed core <mark>ABAP</mark> application classes and logic in <mark>BW</mark>. We used <mark>Git</mark> for collaboration between team members.
-          
-          Project duration: 1 year
+          I developed core <mark>ABAP</mark> application classes,  tax calculations and logic in <mark>BW</mark>. 
+          I used <mark>Git</mark> for collaboration between team members and IDE <mark>SAP Business Application Studio</mark> for UI development.
       - layout: left
-        title: Super awesome project 2
+        title: SAP e-shop integration www.teta.cz
+        sub_title: Heidelberg Materials Germany
+        caption: Duration - 1 year (2024-2025)
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-
+          I developed a complete backend solution for e-shop www.teta.cz . For communication between e-shop and SAP I builded Swagger <mark>REST</mark> API to provide and consume data.
+          With the retrieved data in <mark>ABAP</mark> I developed core logic to create purchase orders, invoices, deliveries, reservations, stocks, WM movements and other related objects.
+          I developed <mark>SAPUI5</mark> custom applications for warehouse stock administration registered them into <mark>Fiori</mark> Launchpad.
+          A barcode scanner application, which ran on mobile was part of development to support warehouse workers in packaging.
+          In the end I integrated third-party <mark>REST</mark> API Balikomat to automatically create package labels, print labels, and register of packages for delivery service providers.
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
