--- a/_config.yml
+++ b/_config.yml
@@ -65,23 +65,31 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Magellen Tax Portal
-        sub_title: Heidelberg Materials Germany
+        title: Magellan Tax Portal
+        sub_title: Heidelberg Materials, Germany
         caption: Duration - 1 year (2024-2025)
         description: | # this will include new lines to allow paragraphs
           I participated on development of Tax Portal as technical team leader. I designed and developed UI of final solution using custom <mark>SAPUI5</mark> SDK.
-          I developed core <mark>ABAP</mark> application classes,  tax calculations and logic in <mark>BW</mark>. 
+          I developed core <mark>ABAP</mark> application classes,  tax calculations and logic in <mark>BW</mark>. I designed and builded <mark>oData</mark> service for data consumption.
           I used <mark>Git</mark> for collaboration between team members and IDE <mark>SAP Business Application Studio</mark> for UI development.
       - layout: left
-        title: SAP e-shop integration www.teta.cz
-        sub_title: p.k.Solvent s.r.o. Czech Republic
-        caption: Duration - 1,5 year (2023-2024)
+        title: SAP e-shop www.teta.cz
+        sub_title: p.k.Solvent s.r.o., Czech Republic
+        caption: Duration - 1 year 6 months (2023-2024)
         description: | # this will include new lines to allow paragraphs
           I developed a complete backend solution for e-shop www.teta.cz . For communication between e-shop and SAP I builded Swagger <mark>REST</mark> API to provide and consume data.
           With the retrieved data in <mark>ABAP</mark> I developed core logic to create purchase orders, invoices, deliveries, reservations, stocks, WM movements and other related objects.
           I developed <mark>SAPUI5</mark> custom applications for warehouse stock administration registered them into <mark>Fiori</mark> Launchpad.
           A barcode scanner application, which ran on mobile was part of development to support warehouse workers in packaging.
           In the end I integrated third-party <mark>REST</mark> API Balikomat to automatically create package labels, print labels, and register of packages for delivery service providers.
+      - layout: left
+        title: Asset Management
+        sub_title: HomeCredit, Kazakhstan
+        caption: Duration - 3 months (2024)
+        description: | # this will include new lines to allow paragraphs
+          I took care about development of custom Asset Management <mark>SAPUI5</mark> applications for administration of company assets. I developed <mark>ABAP</mark>
+          application classes that provided data to custom <mark>oData</mark> services. To handle asset transfer approval between employees I designed and developed custom
+          class based <mark>SAP Business Workflow</mark> and developed custom My Inbox approval screen.
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
