--- a/_config.yml
+++ b/_config.yml
@@ -160,7 +160,7 @@ content:
       - layout: left
         title: Trip Logbook
         sub_title: DHL Information Services s.r.o., Czech Republic
-        caption: Duration - 4 months (2019)
+        caption: Duration - 4 months (2018)
         description: | # this will include new lines to allow paragraphs
           As a fulltime employee I developed custom master-detail <mark>Fiori</mark> application.The purpose of application was to manage company car bookings and track journey details. Application UI layout was changing dynamically based on customizing in SAP.
           Application was assigned to users in <mark>Fiori</mark> Launchpad.
@@ -174,52 +174,55 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        title: EmbedIT s.r.o., Czech Republic
+        link: https://www.embedit.com
+        sub_title: Senior SAP Software Engineer
+        caption: February 2019 - Present
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-
+            As SAP software engineer I design and develop business solutions for end customers. The biggest projects included development in <mark>ABAP</mark> <mark>SAPUI5</mark> and <mark>SAP Business Workflow</mark> .
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        title: Heidelberg Materials, Germany
+        link: https://www.heidelbergmaterials.com
+        sub_title: Senior SAP Software Engineer
+        caption: September 2021 - Present
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-
+           I deliver software solutions for german customer. Mostly in are of <mark>SAP Business Workflow</mark> , custom <mark>ABAP</mark> business logic and <mark>Fiori</mark> applications development.
+      - layout: left
+        title: DHL Information Services s.r.o., Czech Republic
+        link: https://group.dhl.com/
+        sub_title: SAP Software Engineer
+        caption: February 2018 - January 2019
+        description: | # this will include new lines to allow paragraphs
+           As full-time employee I supported business as usual. Fixing of issues, enhancements of existing solutions and development of new applications using <mark>SAPUI5</mark> SDK and <mark>ABAP</mark> . I had
+           chance to travel to Kuala Lumpur, Malaysia to train developers in area of <mark>Fiori</mark> and <mark>SAPUI5</mark> .    
+      - layout: left
+        title: CONSIT s.r.o., Czech Republic
+        link: https://www.consit.cz
+        sub_title: SAP Fiori FrontEnd Developer
+        caption: June 2016 - January 2018
+        description: | # this will include new lines to allow paragraphs
+           As full-time employee I designed and developed internal HR applications for company employees. I worked with <mark>SAPUI5</mark> SDK  <mark>JavaScript</mark> and <mark>ABAP</mark> . I developed company website.
+           In this company I had opportunity to meet SAP for the first time.
+      - layout: left
+        title: Freelance Webdeveloper
+        sub_title: Freelance Webdeveloper
+        caption: January 2016 - May 2016
+        description: | # this will include new lines to allow paragraphs
+           I started my career as webmaster and webdeveloper. I got familiar with <mark>HTML</mark> <mark>JavaScript</mark> and <mark>Adobe Photoshop</mark> . Apart from small tasks for multiple websites 
+           during this time I developed my very first website www.strednyliptov.sk .       
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+        title: University of Žilina in Žilina
+        caption: 2010 - 2015
+        sub_title: Services in IT
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-
+           I successfully graduated with a degree and wrote a thesis on securing web forms in <mark>PHP</mark> .
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+           I love to spend with my family. I am casual PS5 / PC gamer. I love to read books and improve myself in every possible way.
 
 # Footer
 footer_show_references: true
