--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ additional_links:
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
-# gtm: "GTM-0000000"
+  gtm: "GTM-5XZ478HH"
 # gtag: "UA-00000000-0"
 # google_analytics: "UA-00000000-0"
 
